[FEAT] TDS symbol class